@@ -1,7 +1,13 @@
 unity (7.5.0+16.10.20160906.1-0ubuntu2) UNRELEASED; urgency=medium
 
+  [ Marco Trevisan (Treviño) ]
   * LockScreenController: ignore icon_paths_changed signal in
     menumanager for Lockscreen (LP: #1635625)
+
+  [ Andrea Azzarone ]
+  * Properly handle the file manager copy dialog in
+    FileManagerLauncherIcon and in StorageLauncherIcon. (LP: #1575452,
+    LP: #1609845)
 
  -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Fri, 11 Nov 2016 14:45:03 +0100
 
